infrastructure/charts/vault/vault-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ingressroute
  namespace: vault
spec:
  entryPoints: []
    # If not specified, HTTP routers will accept requests from all EntryPoints in the list of default EntryPoints.
    # - web
    # - websecure
  routes:
    - match: Host(`vault.poddle.uz`)
      kind: Rule
      services:
        - name: vault-active
          port: 8200
          serversTransport: vault-transport
  # tls:
  #   secretName: wildcard-poddle-uz-tls-secret
